src/App.css
.container {
  background-color: #fff;
  width: 100vw;
  height: 100vh;
}

.container.dark-mode {
  background-color: #000;
}

.pixels-container {
  width: 100vw;
  line-height: 0;
}

.pixels-container.graph {
  background-size: 8.3vw 8.3vw;
  background-image:
  linear-gradient(to right, #eee 4px, transparent 4px),
  linear-gradient(to bottom, #eee 4px, transparent 4px);
}

.container.dark-mode .pixels-container.graph {
 background-image:
  linear-gradient(to right, #080808 4px, transparent 4px),
  linear-gradient(to bottom, #080808 4px, transparent 4px); 
}

.pixel {
  display: inline-block;
  width: 16.666vw;
  min-height: 8.3vw;
  height: 8.3vw;
}

.pixels-container.big .pixel {
  width: 16.666vw;
  height: 16.666vw;
}

.pixel.border {
  outline:  5px solid #fff;
  outline-offset: -5px;
  z-index: 1000;
}

.container.dark-mode .pixel.border {
  outline:  5px solid #000;
}

.colorpicker-container {
  width:  100vw;
}

.hide {
  display: none;
}

.user-controls-container {
  width: 100%;
  height:  8.33333vw;
}

.user-control {
  overflow: hidden;
  text-align: center;
  /*height: 8.33333vw;*/
}

div.knob-container {
  display: inline-block;
  /*enabling this breaks the click events on rc-knob*/
  /*position: relative;*/
  font-size: 0.6em;
  margin-left: 1vw;
  min-width:  11.5vw;
}

div.knob-container label {
  position: relative;
  margin-left: 3.6em;
  display: inline;
  text-align: center;
  top: -2em;
}

.live-container {
  width: 100vw;
  height: 4vh;
  text-align: center;
  /*font-size: 1.8;*/
  font-size: 1.3em;
  padding-top: 1vh;
  font-weight: bold;
  background-color: #000;
}

.live-container.live {
  color: #f00;

  -webkit-animation: live-animation 8s ease-in-out infinite alternate;
  -moz-animation: live-animation 8s ease-in-out infinite alternate;
  animation: live-animation 8s ease-in-out infinite alternate;
}

.container.dark-mode .live-container.live {
  color: #200;

  -webkit-animation: dark-live-animation 8s ease-in-out infinite alternate;
  -moz-animation: dark-live-animation 8s ease-in-out infinite alternate;
  animation: dark-live-animation 8s ease-in-out infinite alternate;
}

@keyframes dark-live-animation {
  0% {
    background-color: #000004;
    color: #a00;
  }
  15% {
    background-color: #000016;
    color: #a00;
  }
  25% {
    background-color: #000005;
    color: #a00;
  }
  40% {
    background-color: #000016;
    color: #a00;
  }
  50% {
    background-color: #000020;
    color: #a00;
  }

  75% {
    background-color: #000013;
    color: #a00;
  }
  80% {
    background-color: #000014;
    color: #a00;
  }
  95% {
    background-color: #000015;
    color: #a00;
  }
  100% {
    background-color: #000001;
    color: #a00;
  }
 
}
.soundshower-container {
  /*background-color: #ff0;*/
  min-height: 2vw;
  background-color: #000;
}

.sound-show {
  display: inline-block;
  vertical-align: middle;
  width: 2vw;
  height: 2vw;
  margin-left: 4vw;
  overflow: hidden;
  border: 1px solid black;
  background-color: transparent;

  /*transition: background-color 0.3s;*/
}

.sound-show.playing {
  /*background-color: #0f0;*/
  transition: background-color 0.05s;
  /*width: 3.25%;*/
}

.button {
  box-shadow: 0 0 0 5px black;
  text-align: center;
  display: inline-block;
  font-size: 1.2em;
  width: 4.9vw;
  height: 8.3vw;
}

.button.white-border {
  box-shadow: 0 0 0 5px #fff;
}

.container.dark-mode .button.white-border {
  box-shadow: 0 0 0 5px #222;
}

.button.green-border {
  box-shadow: 0 0 0 5px #0f0;
}

.container.dark-mode .button.green-border {
  box-shadow: 0 0 0 5px #020;
}

.button:active {
  box-shadow: 0 0 0 5px #fff;
}

.container.dark-mode .button:active {
  box-shadow: 0 0 0 5px #222;
}

.play {
  background-color: #0f0;
  color: #0b0;
}

.container.dark-mode .play {
  background-color: #020;
}

.stop{
  background-color: #f00;
  color: #b00;
}

.container.dark-mode .stop{
  background-color: #200;
}

.rand {
  background-color: #00f;
  color: #00b;
}

.container.dark-mode .rand {
  background-color: #002;
}

.schm {
  background-color: #f0f;
  color: #b0b;
}

.container.dark-mode .schm {
  background-color: #202;
}

.fnet {
  background-color: #ff0;
  color: #bb0;
}

.container.dark-mode .fnet {
  background-color: #220;
}

.grpp {
  background-color: #0ff;
  color: #0bb;
}

.container.dark-mode .grpp {
  background-color: #022;
}

.dark {
  background-color: #000;
  color: #eee;
}


.sequencer-container {
  width: 100vw;
}

.sequencer-button {
  border: 1px solid #fff;
  width: 6.25%;
  height: 2vh;
  min-height: 20px;
}

.container.dark-mode .sequencer-button {
  border: 1px solid #000;
  background-color: #000;
}

.enable {
  color: #0f0;
}

.disable {
  color: #f00;
}


.value {
  /*font-family: 'Work Sans', sans-serif;*/
  fill: #fc5a96;
  font-size: 30px;
}


  #simple {
    display: none;
  }


@media (orientation: portrait) {
  .pixels-container {
    min-height: 33.333vw;
  }

  .pixel {
    width: 8.333vw;
    min-height: 8.333vw;
    height: 8.333vw; 
  }

  .pixels-container .color-picker .pixel {
    width: 16.6vw;
    min-height: 16.6vw;
    height: 16.6vw;
  }

  .pixels-container.big .color-picker .pixel {
    width: 50vw;
    height: 14.6vh;
  }

  .live-container {
    position: fixed;
    bottom: 0;
  }

  .pixels-container, .colorpicker-container, .knob-container {
    height:  20vw;
  }

  .soundshower-container {
    height: 10vw;
  }

  .user-controls-container {

    position: absolute;
    bottom: 28vh;

    height: 10vw;
    /*padding-bottom: 20em;*/
  }

  div.knob-container {
    display: none;
  }

  .button {
    width: 20vw;
    height: 12vh;
  }

  label.simple-control {
    font-weight: bold;
    white-space: nowrap;
    text-align: center;
    font-size: 0.7em;
    overflow-x: hidden;
    display: inline-block;
    min-width: 16vw;
    width: 16vw;
    color:  #000;
  }

  .container.dark-mode label.simple-control {
    color: #aaa;
  }
  label.simple-control.wide {
    width: 25vw;
  }

  .simple-control button {
    margin-left: 2vw;
    width:  12vw;
    height:  12vw;
    display: block;
  }

  .container.dark-mode .simple-control button {
    background-color: #333;
    color: #11;
    border: #000;
  }

  .simple-control.wide button {
    width:  22vw;
  }

  .sequencer-button {
    height: 6vh;
  }

  #transport {
    position: fixed;
    bottom: 0;
    display: block;
  }


  #simple {
    /*position: absolute;*/
    /*padding-bottom: 20vh;*/
    display: block;
  }
}

